--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -40,6 +40,7 @@
           <p>Hardy and great for indoor air purification.</p>
         </div>
 
+        <div class="row">   
         <!-- Third Plant -->
         <div class="col-md-4 text-center">
           <img
