--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -39,6 +39,7 @@
           <h5 class="mt-3">Snake Plant</h5>
           <p>Hardy and great for indoor air purification.</p>
         </div>
+      </div>
 
         <div class="row">   
         <!-- Third Plant -->
