--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -14,10 +14,10 @@
     <div class="container my-5">
       <h1 class="text-center mb-4">🌱 My Plant Gallery 🌱</h1>
 
-      <!-- Row and Columns (Bootstrap Concept 2: Grid System) -->
+      <!-- First Row -->
       <div class="row">
         <!-- First Plant -->
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://www.shutterstock.com/image-photo/indoor-house-pot-plants-potted-600nw-1747639997.jpg"
             class="img-fluid rounded"
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Second Plant -->
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://shop-static.arborday.org/media/0004367_snake-plant.jpeg"
             class="img-fluid rounded"
@@ -41,9 +41,10 @@
         </div>
       </div>
 
-        <div class="row">   
+      <!-- Second Row -->
+      <div class="row">
         <!-- Third Plant -->
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center mb-4">
           <img
             src="https://media.houseandgarden.co.uk/photos/64677e9c55fc4e858e5b4d31/master/w_1600%2Cc_limit/492766473"
             class="img-fluid rounded"
@@ -53,12 +54,26 @@
           <h5 class="mt-3">Peace Lily</h5>
           <p>Elegant flowers and thrives in shade!</p>
         </div>
+
+        <!-- Fourth Plant -->
+        <div class="col-md-6 text-center mb-4">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Golden_Pothos.jpg/640px-Golden_Pothos.jpg"
+            class="img-fluid rounded"
+            alt="Golden Pothos"
+            style="width: 200px; height: 200px; object-fit: cover"
+          />
+          <h5 class="mt-3">Golden Pothos</h5>
+          <p>Low maintenance and grows quickly indoors.</p>
+        </div>
       </div>
 
-      <!-- Button (Bootstrap Concept 3: Components) -->
+      <!-- Button -->
       <div class="text-center mt-4">
         <button class="btn btn-success">See More Plants</button>
       </div>
     </div>
   </body>
 </html>
+       
+  
