--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Container (Bootstrap Concept 1: Layout using Container) -->
     <div class="container my-5">
-      <h1 class="text-center mb-4">🌱 My Plant Gallery 🌱</h1>
+      <h1 class="text-center mb-4">Nature Sanctuary</h1>
 
       <!-- First Row -->
       <div class="row">
@@ -54,7 +54,7 @@
         <!-- Fourth Plant -->
         <div class="col-md-6 text-center mb-4">
           <img
-            src="https://www.google.com/imgres?q=golden%20pothos&imgurl=https%3A%2F%2Fnouveauraw.com%2Fwp-content%2Fuploads%2F2020%2F01%2FPothos-Golden-Pothos-plant-800-great-coloring.png&imgrefurl=https%3A%2F%2Fnouveauraw.com%2Findoor-plants%2Fvarieties%2Fpothos-golden-pothos-plant%2F&docid=AHeA2g3JEIKc5M&tbnid=xfOipQiBLgtA3M&vet=12ahUKEwjC_vfA-tWOAxVeM1kFHQmUJosQM3oECBIQAA..i&w=800&h=600&hcb=2&ved=2ahUKEwjC_vfA-tWOAxVeM1kFHQmUJosQM3oECBIQAA"
+            src="https://cdn11.bigcommerce.com/s-hyjcacdegu/images/stencil/1280x1280/products/10875/13559/23_pothos_golden_4__26220.1711997640.JPG?c=1"
             alt="Golden Pothos"
             style="width: 200px; height: 200px; object-fit: cover"
           />
